<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuessMyNumber</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_game">Nuevo Juego</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="action_settings">Settings</string>
    <string name="turno_inicial">T</string>
    <string name="bien_inicial">B</string>
    <string name="regular_inicial">R</string>
    <string name="numero">Número</string>
    <string name="me">Yo</string>
    <string name="him">Amigo</string>
    <string name="title_activity_duel_fragment">DuelFragmentActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

</resources>
