<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notepad"
    tools:context="ar.com.gmn.android.DuelActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:background="@android:color/transparent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/numeroLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:showDividers="middle" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal" >
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <TableLayout
                android:id="@+id/results_me"
                android:layout_width="fill_parent"
                android:layout_height="379dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:paddingBottom="15dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id ="@+id/meDuel"
                    style="@style/ResultadoDuelo"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/me" />

                <TableRow
                    android:id="@+id/resultHeaderMe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textNumeroMe"
                        style="@style/ResultadoDuelo"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/numero" />

                    <TextView
                        android:id="@+id/textBienMe"
                        style="@style/ResultadoDuelo"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="@string/bien_inicial" />

                    <TextView
                        android:id="@+id/textRegularMe"
                        style="@style/ResultadoDuelo"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="@string/regular_inicial" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/borde_horizontal" />
            </TableLayout>

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/borde_vertical" />

            <TableLayout
                android:id="@+id/results_him"
                android:layout_width="fill_parent"
                android:layout_height="379dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:paddingBottom="15dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id ="@+id/himDuel"
                    style="@style/ResultadoDuelo"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/him" />

                <TableRow
                    android:id="@+id/resultHeaderHim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textNumeroHim"
                        style="@style/ResultadoDuelo"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/numero" />

                    <TextView
                        android:id="@+id/textBienHim"
                        style="@style/ResultadoDuelo"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="@string/bien_inicial" />

                    <TextView
                        android:id="@+id/textRegularHim"
                        style="@style/ResultadoDuelo"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="@string/regular_inicial" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/borde_horizontal" />
            </TableLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>